# GNN-fraud-detection

./: .gitignore  AGENTS.md  README.md  README_GNN_IMPROVEMENTS.md  baseline.py  baseline_new.py  pyproject.toml  requirements.txt
demo/: __init__.py  app.py
demo/assets/: custom.css
demo/components/: __init__.py  explanations.py  fraud_alerts.py  network_graph.py
src/fraud_detection/: config.py  train.py  train_cv.py
src/fraud_detection/api/: __init__.py  service.py
src/fraud_detection/data/: __init__.py  download.py  preprocessing.py
src/fraud_detection/explainability/: __init__.py  llm_explainer.py  shap_explainer.py
src/fraud_detection/models/: __init__.py  classifier.py  gnn.py
tests/: test_components.py  test_preprocessing.py
