[project]
name = "fraud-detection-gnn"
version = "0.1.0"
description = "GNN + XGBoost hybrid fraud detection with interactive visualization"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.1.0,<2.6",
    "torch-geometric>=2.4.0",
    "xgboost>=2.0.0,<3.0",
    "shap>=0.42.0,<1.0",
    "dash>=2.14.0,<3.0",
    "pandas>=2.0.0,<3.0",
    "numpy>=1.24.0,<2.0",
    "networkx>=3.0,<4.0",
    "scikit-learn>=1.3.0,<2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0,<1.0",
    "pyyaml>=6.0,<7.0",
    "kagglehub>=0.2.0,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_detection"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
]
